// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should override alignment styles with position styles 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 100%;
  right: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  left: 100%;
  border-left-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with align bottom, when passed "bottom" for the align prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  top: calc(50% - (16px + 4px));
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 12px;
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with align center, when passed "center" for the align prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with align left, when passed "left" for the align prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with align right, when passed "right" for the align prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with align top, when passed "top" for the align prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  bottom: 50%;
  bottom: calc(50% - (16px + 4px));
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  bottom: 12px;
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with position bottom, when passed "bottom" for the position prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 100%;
  top: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.circuit-0::after {
  bottom: 100%;
  border-bottom-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with position left, when passed "left" for the position prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 100%;
  right: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  left: 100%;
  border-left-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with position right, when passed "right" for the position prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 100%;
  left: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-0::after {
  right: 100%;
  border-right-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;

exports[`Tooltip should render with position top, when passed "top" for the position prop 1`] = `
.circuit-0 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #000000;
  color: #FFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: 100%;
  bottom: calc(100% + 12px);
}

.circuit-0::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-0::after {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.circuit-0::after {
  top: 100%;
  border-top-color: #000000;
}

<div
  class="circuit-0 circuit-1"
>
  Tooltip content
</div>
`;
